--- a/main.html
+++ b/main.html
@@ -29,10 +29,10 @@
             Bootcamps
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">Coding</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
+            <li><a class="dropdown-toggle" href="#">Coding</a></li>
+            <li><a class="dropdown-toggle" href="#">Another action</a></li>
             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
+            <li><a class="dropdown-toggle" href="#">Something else here</a></li>
           </ul>
         </li>
         <li class="nav-item">
