--- a/main.html
+++ b/main.html
@@ -30,7 +30,7 @@
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
             <li><a class="dropdown-toggle" href="#">Coding</a></li>
-            <li><a class="dropdown-toggle" href="#">Another action</a></li>
+            <li><a class="dropdown-toggle" href="#">Career Resources</a></li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-toggle" href="#">Something else here</a></li>
           </ul>
