--- a/main.html
+++ b/main.html
@@ -32,7 +32,7 @@
             <li><a class="dropdown-toggle" href="#">Coding</a></li>
             <li><a class="dropdown-toggle" href="#">Career Resources</a></li>
             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-toggle" href="#">Something else here</a></li>
+            <li><a class="dropdown-toggle" href="#">Tech Fields</a></li>
           </ul>
         </li>
         <li class="nav-item">
